facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vec_vs_value_array.snap
---
source: facet-diff/tests/diff_snapshots.rs
assertion_line: 817
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│Vec<i64> [1, 2, 3]  │
╰────────────────────╯
╭After───────────────╮
│[                   │
│  1,                │
│  2,                │
│  3,                │
│]                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
