facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vec_vs_value_array_element_added.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Vec<i64> [1, 2, 3]      │
╰────────────────────────╯
╭After───────────────────╮
│[                       │
│  1,                    │
│  2,                    │
│  3,                    │
│  4,                    │
│  5,                    │
│]                       │
╰────────────────────────╯
╔Diff════════════════════╗
║[                       ║
║    .. 3 unchanged items║
║    + 4                 ║
║    + 5                 ║
║]                       ║
╚════════════════════════╝
