facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vec_with_many_changes.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────────────────────────────────────╮
│Vec<i32> [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]     │
╰─────────────────────────────────────────────╯
╭After────────────────────────────────────────╮
│Vec<i32> [1, 20, 3, 40, 5, 60, 7, 80, 9, 100]│
╰─────────────────────────────────────────────╯
╔Diff═════════════════════════════════════════╗
║[                                            ║
║    - 1                                      ║
║    - 2                                      ║
║    - 3                                      ║
║    - 4                                      ║
║    - 5                                      ║
║    - 6                                      ║
║    - 7                                      ║
║    - 8                                      ║
║    - 9                                      ║
║    - 10                                     ║
║    + 1                                      ║
║    + 20                                     ║
║    + 3                                      ║
║    + 40                                     ║
║    + 5                                      ║
║    + 60                                     ║
║    + 7                                      ║
║    + 80                                     ║
║    + 9                                      ║
║    + 100                                    ║
║]                                            ║
╚═════════════════════════════════════════════╝
