facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vecs_element_added.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Vec<i32> [1, 2, 3]      │
╰────────────────────────╯
╭After───────────────────╮
│Vec<i32> [1, 2, 3, 4]   │
╰────────────────────────╯
╔Diff════════════════════╗
║[                       ║
║    .. 3 unchanged items║
║    + 4                 ║
║]                       ║
╚════════════════════════╝
