facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vecs_one_element_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Vec<i32> [1, 2, 3]      │
╰────────────────────────╯
╭After───────────────────╮
│Vec<i32> [1, 2, 4]      │
╰────────────────────────╯
╔Diff════════════════════╗
║[                       ║
║    .. 2 unchanged items║
║    3 → 4               ║
║]                       ║
╚════════════════════════╝
