facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vecs_reordered.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│Vec<i32> [1, 2, 3]      │
╰────────────────────────╯
╭After───────────────────╮
│Vec<i32> [3, 1, 2]      │
╰────────────────────────╯
╔Diff════════════════════╗
║[                       ║
║    + 3                 ║
║    .. 2 unchanged items║
║    - 3                 ║
║]                       ║
╚════════════════════════╝
